frontend/test/should_fail/defYield_008a.grg
using defYield;

test t
{
	def x:B;
	y:B;
	yield { yield y = x; }
}

pattern p(x:B, def z:B)
{
	yield { yield x = z; }
}
